# kitty24-web

./: .gitignore  Cargo.toml  LICENSE  README.md  build-web.bat  build.bat  run-win.bat  test-win.bat
assembler/: Cargo.toml
assembler/src/: kittyasm.pest
compiler/: Cargo.toml
compiler/src/: lib.rs
console/: Cargo.toml
console/src/: main.rs
crates/assembler/src/: kittyasm.pest  lib.rs
crates/common/src/: lib.rs
crates/virtual_machine/: Cargo.toml
crates/virtual_machine/src/: cpu.rs  io.rs  lib.rs
emulator_standalone/: Cargo.toml
emulator_web/: Cargo.toml
emulator_web/src/: boot.kittyasm
kitty24/: Cargo.toml
kitty24/src/: console.rs  main.rs
kitty24_console/: Cargo.toml
kitty24_console/src/: main.rs
src/: boot.kittyasm  lib.rs  main.rs
tests/: tests.rs
tests/assembler/: data.rs  labels.rs  mod.rs
tests/common/: mod.rs
tests/vm/: interrupts.rs  mod.rs  ops.rs
virtual_machine/: Cargo.toml
virtual_machine/src/: cpu.rs  io.rs  lib.rs
web/: audio-processor.js  index.html  kitty24.js  style.css
