[workspace]

members = [
	"assembler",
	"compiler",
	"kitty24",
	"emulator_standalone",
	"emulator_web",
	"virtual_machine",
]

resolver = "2"
# [package]
# name = "kitty24"
# version = "0.1.0"
# edition = "2021"

# [lib]
# crate-type = ["cdylib"]

# [dependencies]
# virtual_machine = { path = "crates/virtual_machine" }
# assembler = { path = "crates/assembler"}
# common = { path = "crates/common"}
# pest = "2.7.4"

# [profile.release]
# lto = true
