[package]
name = "kitty24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler = { path = "../compiler" }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs = "5.0.1"
opener = { version = "0.6.1", features = ["reveal"] }
winapi = { version = "*", features = ["winerror"] }
serde = { version = "1.0.192", features = ["derive"] }
toml = "0.8.8"
notify = "6.1.1"
